--- a/web/pages/dashboard.templ
+++ b/web/pages/dashboard.templ
@@ -26,7 +26,14 @@ func (d dashboard) Props() shared.PageProps {
 
 templ (d dashboard) View() {
 	<section class="mt-4">
-		<a href="/endpoints"><button class="bg-primary text-dark rounded-lg w-12 h-12 text-4xl font-extralight">+</button></a>
+		<a
+			href="/endpoints"
+			hx-get="/endpoints"
+			hx-replace-url="/endpoints"
+			hx-select="main"
+			hx-target="main"
+			hx-swap="outerHTML"
+		><button class="bg-primary text-dark rounded-lg w-12 h-12 text-4xl font-extralight">+</button></a>
 	</section>
 	if len(d.endpoints) == 0 {
 		<p class="text-center text-secondary">No endpoints registered.</p>
