feat(UI): Various Fixes
- Added margin in a few spaces on the landing page
- Updated the pictures on the landing page
- Localized all images
- Made all buttons float on hover
- Made text larger in a few areas
- Changed response when throttled to something more obvious

--- a/web/pages/auth.templ
+++ b/web/pages/auth.templ
@@ -44,14 +44,14 @@ templ (a auth) hero() {
 }
 
 templ (a auth) googleOauth() {
-	<a href="/auth/google" class="flex self-center items-center justify-between p-5 bg-primary text-dark rounded-full w-60 mb-4">
+	<a href="/auth/google" class="flex self-center items-center justify-between p-5 bg-primary text-dark rounded-full w-60 mb-4 relative floaty">
 		<img src="/assets/google.png" class="w-6 h-6"/>
 		<p class="text-center">Sign { getText(a.hasAcc) } with Google</p>
 	</a>
 }
 
 templ (a auth) githubOauth() {
-	<a href="/auth/github" class="flex self-center items-center justify-between p-5 bg-primary text-dark rounded-full w-60 mb-4">
+	<a href="/auth/github" class="flex self-center items-center justify-between p-5 bg-primary text-dark rounded-full w-60 mb-4 relative floaty">
 		@githubSvg()
 		<p class="text-center">Sign { getText(a.hasAcc) } with GitHub</p>
 	</a>
