--- a/web/pages/dashboard.templ
+++ b/web/pages/dashboard.templ
@@ -33,7 +33,7 @@ templ (d dashboard) View() {
 			hx-select="main"
 			hx-target="main"
 			hx-swap="outerHTML"
-		><button class="bg-primary text-dark rounded-lg w-12 h-12 text-4xl font-extralight">+</button></a>
+		><button class="bg-primary text-dark rounded-lg w-12 h-12 text-4xl font-extralight relative floaty">+</button></a>
 	</section>
 	if len(d.endpoints) == 0 {
 		<p class="text-center text-secondary">No endpoints registered.</p>
