--- a/web/pages/endpointForm.templ
+++ b/web/pages/endpointForm.templ
@@ -39,7 +39,7 @@ templ (e endpointForm) View() {
 				<label for="max" class="text-secondary">Max Requests Per Interval</label>
 				<input type="number" name="max" id="max" class="border-2 border-primary rounded-lg p-2"/>
 			</div>
-			<button type="submit" class="bg-primary text-dark rounded-lg w-full h-12 text-2xl mt-4">Register Endpoint</button>
+			<button type="submit" class="bg-primary text-dark rounded-lg w-full h-12 text-2xl mt-4 relative floaty">Register Endpoint</button>
 		</form>
 		<p id="response-p" class="w-full text-center text-secondary p-2 mb-4 rounded no-underline"></p>
 		<p id="errors" class="w-full text-center text-red-500 p-2 mb-4 rounded no-underline"></p>
