--- a/web/partials/betaBanner.templ
+++ b/web/partials/betaBanner.templ
@@ -1,7 +1,7 @@
 package partials
 
 templ BetaBanner() {
-	<a class="w-full bg-yellow-400 text-center text-dark p-2 mb-4 rounded text-xs/3 no-underline" href="https://getwaitlist.com/waitlist/15760">
+	<a class="w-full bg-yellow-400 text-center text-dark p-2 mb-4 rounded text-xs/3 md:text-sm/3 no-underline" href="https://getwaitlist.com/waitlist/15760">
 		<p>Thank you for your interest! We are currently in development.</p>
 		<p>Please <span class="underline">click here</span> to be notified when we launch.</p>
 	</a>
