--- a/web/pages/settings.templ
+++ b/web/pages/settings.templ
@@ -19,8 +19,8 @@ func (s settings) Props() shared.PageProps {
 templ (s settings) View() {
 	<section class="mt-4">
 		<section>
-			<p class="text-secondary text-2xl text-center">{ models.UserFromCtx(ctx).Name }</p>
-			<p class="text-secondary text-xs text-center">{ models.UserFromCtx(ctx).Email }</p>
+			<p class="text-secondary text-3xl text-center">{ models.UserFromCtx(ctx).Name }</p>
+			<p class="text-secondary text-sm text-center">{ models.UserFromCtx(ctx).Email }</p>
 		</section>
 		<section class="my-4">
 			<h2 class="text-secondary text-2xl">API Key</h2>
@@ -35,7 +35,7 @@ templ (s settings) View() {
 						action="/auth/delete"
 						onsubmit="return confirm('Do you really want to delete? This will delete your entire account.');"
 					>
-						<button class="bg-red-500 text-dark rounded-lg w-12 h-12 text-4xl font-extralight flex justify-center items-center">
+						<button class="bg-red-500 text-dark rounded-lg w-12 h-12 text-4xl font-extralight flex justify-center items-center relative floaty">
 							@deleteBtn()
 						</button>
 					</form>
@@ -46,7 +46,7 @@ templ (s settings) View() {
 						action="/auth/regenerate"
 						onsubmit="return confirm('Do you really want to invalidate and regenerate your API key?');"
 					>
-						<button class="bg-blue-500 text-dark rounded-lg w-12 h-12 text-sm font-extralight flex justify-center items-center">
+						<button class="bg-blue-500 text-dark rounded-lg w-12 h-12 text-sm font-extralight flex justify-center items-center relative floaty">
 							@remakeBtn()
 						</button>
 					</form>
