--- a/web/partials/endpoint.templ
+++ b/web/partials/endpoint.templ
@@ -11,7 +11,7 @@ templ Endpoint(e *models.Endpoint, key string) {
 		<p class="text-sm md:text-2xl text-secondary truncate mx-1 grow max-w-80">{ e.OriginalUrl.String() }</p>
 		<p class="text-md md:text-2xl text-secondary mx-1">{ fmt.Sprintf("%dreqs/%s", e.Bucket.Max, e.Bucket.Interval) }</p>
 		<div class="flex justify-between">
-			<a target="_blank" href={ templ.URL(fmt.Sprintf("%s/v1/endpoints/%s?key=%s", internal.ServerCallbackURL(), e.ThrottlrPath, key)) } class="bg-primary w-8 h-8 md:w-12 md:h-12 rounded flex justify-center items-center mx-1"><img width="24" height="24" src="https://img.icons8.com/ios-filled/50/link--v1.png" alt="link--v1"/></a>
+			<a target="_blank" href={ templ.URL(fmt.Sprintf("%s/v1/endpoints/%s?key=%s", internal.ServerCallbackURL(), e.ThrottlrPath, key)) } class="bg-primary w-8 h-8 md:w-12 md:h-12 rounded flex justify-center items-center mx-1 relative floaty"><img width="24" height="24" src="/assets/link.png" alt="link"/></a>
 			<a
 				href={ templ.URL(fmt.Sprintf("/views/endpoints/%s", e.ThrottlrPath)) }
 				hx-get={ fmt.Sprintf("/views/endpoints/%s", e.ThrottlrPath) }
@@ -19,8 +19,8 @@ templ Endpoint(e *models.Endpoint, key string) {
 				hx-select="main"
 				hx-target="main"
 				hx-swap="outerHTML"
-				class="bg-primary w-8 h-8 md:w-12 md:h-12 rounded flex justify-center items-center mx-1"
-			><img width="24" height="24" src="https://img.icons8.com/material-two-tone/24/view-file.png" alt="view-endpoint"/></a>
+				class="bg-primary w-8 h-8 md:w-12 md:h-12 rounded flex justify-center items-center mx-1 relative floaty"
+			><img width="24" height="24" src="/assets/view-file.png" alt="view-endpoint"/></a>
 		</div>
 	</div>
 }
