--- a/web/partials/nav.templ
+++ b/web/partials/nav.templ
@@ -29,7 +29,7 @@ templ Navbar() {
 			hx-target="main"
 			hx-swap="outerHTML"
 		>
-			<img src="/assets/logo-full.webp" alt="logo" class="w-60 h-8 self-end"/>
+			<img src="/assets/logo-full.webp" alt="logo" class="w-60 h-8 xl:w-72 xl:h-12 self-end"/>
 		</a>
 		<svg onclick={ toggleNav("profileNav") } xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-user-circle block md:hidden" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#865DFF" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -122,7 +122,7 @@ templ profileNavList() {
 
 templ desktopSiteNav() {
 	<aside class="hidden md:block w-[40rem] text-lg">
-		<ul class="leading-[5rem] text-secondary flex flex-row justify-evenly">
+		<ul class="leading-[5rem] text-secondary flex flex-row justify-evenly h-full items-center">
 			@siteNavList()
 		</ul>
 	</aside>
@@ -130,7 +130,7 @@ templ desktopSiteNav() {
 
 templ desktopProfileNav() {
 	<aside class="hidden md:block w-[40rem] text-lg">
-		<ul class="leading-[5rem] text-secondary flex flex-row justify-evenly text-nowrap">
+		<ul class="leading-[5rem] text-secondary flex flex-row justify-evenly text-nowrap h-full items-center">
 			@profileNavList()
 		</ul>
 	</aside>
