--- a/web/pages/auth.templ
+++ b/web/pages/auth.templ
@@ -1,14 +1,17 @@
 package pages
 
-import "github.com/linkinlog/throttlr/web/partials"
-import "github.com/linkinlog/throttlr/web/shared"
+import (
+	"github.com/linkinlog/throttlr/web/partials"
+	"github.com/linkinlog/throttlr/web/shared"
+)
 
 func NewAuth(hasAcc bool) auth {
 	return auth{hasAcc: hasAcc}
 }
 
 type auth struct {
-	hasAcc bool
+	hasAcc       bool
+	OauthEnabled bool
 }
 
 func (a auth) Props() shared.PageProps {
@@ -32,13 +35,27 @@ templ (a auth) hero() {
 			<p class="text-secondary text-5xl/tight font-bold underline">Today</p>
 		}
 		<section class="my-4">
-			@a.githubOauth()
-			@a.googleOauth()
+			if a.OauthEnabled {
+				@a.githubOauth()
+				@a.googleOauth()
+			} else {
+				<form
+					action="/auth/sign-in"
+					method="POST"
+					class="flex flex-col items-center"
+				>
+					<input type="text" name="name" class="border-2 border-primary rounded-lg p-2 w-60 mb-4" placeholder="Name"/>
+					<input type="email" name="email" class="border-2 border-primary rounded-lg p-2 w-60 mb-4" placeholder="Email"/>
+					<button class="bg-primary text-dark rounded-lg w-full h-12 text-2xl mt-4 relative floaty">Sign In</button>
+				</form>
+			}
 		</section>
-		if a.hasAcc {
-			@partials.CTA("No account? Sign up", "/sign-up")
-		} else {
-			@partials.CTA("Have an account? Sign in", "/sign-in")
+		if a.OauthEnabled {
+			if a.hasAcc {
+				@partials.CTA("No account? Sign up", "/sign-up")
+			} else {
+				@partials.CTA("Have an account? Sign in", "/sign-in")
+			}
 		}
 	</section>
 }
